--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0.0",
-  "name": "node-lib-template",
-  "description": "开箱即用的 node 库模板",
+  "name": "vite-auto-import-resolvers",
+  "description": "unplugin-auto-imports 的 vite resolver",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -17,29 +17,35 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "vitest",
-    "dev": "esno src/index.ts",
-    "play": "esno demo/index.ts",
-    "test:watch": "vitest --watch",
-    "coverage": "vitest --coverage",
     "prepublishOnly": "npm run build",
-    "build:watch": "npm run build -- --watch src"
+    "dev": "npm run build -- --watch",
+    "play": "pnpm -C examples/vue run dev"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dishait/vite-auto-import-resolvers.git"
   },
   "keywords": [
-    "lib",
-    "tool",
-    "node",
-    "utils"
+    "vue",
+    "vite",
+    "resolver",
+    "unplugin-auto-imports"
   ],
-  "author": "markthree",
+  "author": {
+    "name": "markthree",
+    "email": "1801982702@qq.com",
+    "url": "https://github.com/markthree"
+  },
   "license": "MIT",
-  "dependencies": {},
+  "peerDependencies": {
+    "chokidar": ">=3.5.3",
+    "@types/node": "^17.0.10"
+  },
   "devDependencies": {
     "@types/node": "^17.0.10",
-    "c8": "^7.11.0",
+    "chokidar": "^3.5.3",
     "esno": "^0.14.0",
     "tsup": "^5.11.11",
-    "typescript": "^4.5.4",
-    "vitest": "^0.1.23"
+    "typescript": "^4.5.5"
   }
 }
