--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,12 @@
 		"module": "ES6",
 		"declaration": true,
 		"moduleResolution": "node",
-		"declarationDir": "dist/types", // 类型声明
-		"emitDeclarationOnly": true, // 只输出声明文件
-		"types": ["vitest"], // 引入包类型
-		"skipLibCheck": true, // 跳过包检查
-		"isolatedModules": true, // 孤立模块，把所有文件当做模块处理，避免书写 esbuild 转译不支持的特性
-		"esModuleInterop": true, // 更好的包兼容
-		"forceConsistentCasingInFileNames": true // 区分文件名大小写
+		"declarationDir": "dist/types",
+		"emitDeclarationOnly": true,
+		"skipLibCheck": true,
+		"isolatedModules": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true
 	},
 	"include": ["src"],
 	"exclude": ["dist", "node_modules"]
