--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "chokidar": ">=3.5.3",
-    "@types/node": "^17.0.10"
+    "@types/node": "^17.0.10",
+    "unplugin-auto-import": ">=0.5.11",
+    "chokidar": ">=3.5.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
     "chokidar": "^3.5.3",
     "esno": "^0.14.0",
     "tsup": "^5.11.11",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "unplugin-auto-import": "^0.5.11"
   }
 }
