--- a/examples/vue/tsconfig.json
+++ b/examples/vue/tsconfig.json
@@ -14,7 +14,7 @@
 		"useDefineForClassFields": true,
 		"baseUrl": ".",
 		"paths": {
-			"/@fs/src/*": ["src/*"]
+			"~/*": ["src/*"]
 		}
 	},
 	"exclude": ["node_modules", "dist"]
