--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "build": "tsup",
     "prepublishOnly": "npm run build",
     "dev": "npm run build -- --watch",
-    "play": "pnpm -C examples/vue run dev"
+    "play": "pnpm -C examples/vue run dev",
+    "play:build": "pnpm -C examples/vue run build",
+    "release": "bumpp --commit --push --tag && npm publish"
   },
   "repository": {
     "type": "git",
@@ -38,14 +40,16 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "chokidar": ">=3.5.3"
+    "fast-glob": "^3.2.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
-    "chokidar": "^3.5.3",
+    "bumpp": "^7.1.1",
     "esno": "^0.14.0",
+    "fast-glob": "^3.2.11",
     "tsup": "^5.11.11",
     "typescript": "^4.5.5",
-    "unplugin-auto-import": "^0.5.11"
+    "unplugin-auto-import": "^0.5.11",
+    "vite": "^2.7.13"
   }
 }
