--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "fast-glob": "^3.2.11"
+    "fast-glob": "^3.2.11",
+    "local-pkg": "^0.4.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.19",
     "bumpp": "^7.1.1",
-    "esno": "^0.14.0",
-    "fast-glob": "^3.2.11",
-    "tsup": "^5.11.11",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5",
     "unplugin-auto-import": "^0.5.11",
-    "vite": "^2.7.13"
+    "vite": "^2.8.4",
+    "vite-plugin-restart": "^0.1.1"
   }
 }
