--- a/package.json
+++ b/package.json
@@ -43,15 +43,13 @@
     "fast-glob": "^3.2.11",
     "local-pkg": "^0.4.1",
     "@types/node": "^17.0.19",
-    "unplugin-auto-import": "^0.5.11"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.19",
-    "bumpp": "^7.1.1",
-    "tsup": "^5.11.13",
-    "typescript": "^4.5.5",
-    "unplugin-auto-import": "^0.5.11",
+    "unplugin-auto-import": "^0.6.1",
     "vite": "^2.8.4",
     "vite-plugin-restart": "^0.1.1"
+  },
+  "devDependencies": {
+    "bumpp": "^7.1.1",
+    "tsup": "^5.11.13",
+    "typescript": "^4.5.5"
   }
 }
