feat(dirResolver): add root support

--- a/examples/vue/tsconfig.json
+++ b/examples/vue/tsconfig.json
@@ -11,11 +11,7 @@
 		"lib": ["esnext", "dom"],
 		"resolveJsonModule": true,
 		"moduleResolution": "node",
-		"useDefineForClassFields": true,
-		"baseUrl": ".",
-		"paths": {
-			"/src/*": ["src/*"]
-		}
+		"useDefineForClassFields": true
 	},
 	"exclude": ["node_modules", "dist"]
 }
