--- a/package.json
+++ b/package.json
@@ -40,16 +40,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^17.0.21",
     "fast-glob": "^3.2.11",
     "local-pkg": "^0.4.1",
-    "@types/node": "^17.0.19",
-    "unplugin-auto-import": "^0.6.1",
-    "vite": "^2.8.4",
-    "vite-plugin-restart": "^0.1.1"
+    "unplugin-auto-import": "^0.6.6",
+    "vite": "^2.8.6"
   },
   "devDependencies": {
     "bumpp": "^7.1.1",
-    "tsup": "^5.11.13",
-    "typescript": "^4.5.5"
+    "tsup": "^5.12.1",
+    "typescript": "^4.6.2"
   }
 }
