--- a/package.json
+++ b/package.json
@@ -40,15 +40,28 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^17.0.21",
     "fast-glob": "^3.2.11",
-    "local-pkg": "^0.4.1",
-    "unplugin-auto-import": "^0.6.6",
-    "vite": "^2.8.6"
+    "local-pkg": "^0.4.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "bumpp": "^7.1.1",
     "tsup": "^5.12.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3",
+    "unplugin-auto-import": "^0.6.9",
+    "vite": "^2.9.1"
+  },
+  "peerDependencies": {
+    "@types/node": ">=17.0.23",
+    "unplugin-auto-import": ">=0.6.9",
+    "vite": ">=2.9.1"
+  },
+  "peerDependenciesMeta": {
+    "@types/node": {
+      "optional": true
+    }
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
