--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "vue + vite 的测试例子",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build"
@@ -16,11 +17,11 @@
     "url": "https://github.com/markthree"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
-    "pinia": "^2.0.13",
+    "@vitejs/plugin-vue": "^2.3.4",
+    "pinia": "^2.0.23",
     "unplugin-auto-import": "^0.6.9",
-    "vite": "^2.9.5",
-    "vite-auto-import-resolvers": "workspace:*",
-    "vue": "^3.2.33"
+    "vite": "^2.9.15",
+    "vite-auto-import-resolvers": "workspace:3.0.1",
+    "vue": "^3.2.41"
   }
 }
