--- a/package.json
+++ b/package.json
@@ -41,18 +41,17 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"file-computed": "^0.2.1",
-		"local-pkg": "^0.4.2"
+		"local-pkg": "^0.4.3"
 	},
 	"devDependencies": {
-		"@types/node": "^17.0.45",
-		"bumpp": "^7.2.0",
-		"typescript": "^4.8.4",
-		"unbuild": "^1.0.2",
-		"unplugin-auto-import": "^0.6.9",
-		"vite": "^2.9.15",
+		"@types/node": "^18.16.16",
+		"bumpp": "^9.1.0",
 		"case": "^1.6.3",
-		"fast-glob": "^3.2.12"
+		"fast-glob": "^3.2.12",
+		"typescript": "^5.1.3",
+		"unbuild": "^1.2.1",
+		"unplugin-auto-import": "^0.16.4",
+		"vite": "^3.2.7"
 	},
 	"peerDependencies": {
 		"@types/node": ">=17.0.23",
