--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"local-pkg": "^0.4.3"
+		"fast-glob": "^3.2.12",
+		"local-pkg": "^0.4.3",
+		"scule": "^1.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.16.16",
 		"bumpp": "^9.1.0",
-		"case": "^1.6.3",
-		"fast-glob": "^3.2.12",
 		"typescript": "^5.1.3",
 		"unbuild": "^1.2.1",
 		"unplugin-auto-import": "^0.16.4",
